| Bug #5034 | prepared "select 1 into @arg15", second execute crashes server | ||
|---|---|---|---|
| Submitted: | 13 Aug 2004 15:45 | Modified: | 24 Aug 2004 20:28 |
| Reporter: | Matthias Leich | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1 | OS: | |
| Assigned to: | Konstantin Osipov | Target Version: | |
[13 Aug 2004 15:46]
Matthias Leich
test case
Attachment: ml_err21.test (application/octet-stream, text), 457 bytes.
[14 Aug 2004 2:45]
Konstantin Osipov
The bug doesn't show itself in 5.0, just like 4912. But it's nature is apparently different.
[24 Aug 2004 20:28]
Konstantin Osipov
Fixed in 4.1.4: bk commit - 4.1 tree (konstantin:1.1963) BUG#5034

Description: prepare stmt1 from "select 1 into @arg15" ; execute stmt1 ; # This second execute crashes the server (Segmentation fault) execute stmt1 ; My environment: - Intel PC with Linux(SuSE 9.0) - MySQL 4.1 source distrib. (last ChangeSet@1.1947, 2004-08-13 15:04:10+05:00) How to repeat: Please use my test file, copy it to mysql-test/t ./mysql-test-run ml_err21 The test file contains some additional statements for comparison purposes.